Add #97 evolution to permits to write more securely journal records and entries
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1441 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_statements_point.html.haml
+++ b/app/views/accountancy/_statements_point.html.haml
@@ -30,5 +30,5 @@
   %li="Rouge: écriture à pointer"
 
 %br
-=link_to tc(:validate), :action => :statements, :id => @bank_account.id
+=link_to tc(:validate), :action => :bank_account_statements, :id => @bank_account.id
 #total=render :partial=>'statements'
