--- a/app/views/accountancy/bank_account_statement.html.haml
+++ b/app/views/accountancy/bank_account_statement.html.haml
@@ -1,5 +1,5 @@
 =toolbar do
-  -link :statements
+  -link :bank_account_statements
 
 =evalue(@bank_account_statement, :number)
 =evalue(@bank_account_statement.bank_account, :name)
