--- a/app/views/accountancy/bank_account_statement_point.html.haml
+++ b/app/views/accountancy/bank_account_statement_point.html.haml
@@ -1,6 +1,6 @@
 =toolbar do
   - link :bank_account_statement, :id=>@bank_account_statement.id
-  - link :statements
+  - link :bank_account_statements
 
 %table.dyta
   %tr
