--- a/app/views/company/listing_nodes.html.haml
+++ b/app/views/company/listing_nodes.html.haml
@@ -1,7 +1,2 @@
 =render :partial=>"listing_node", :object=>@listing.root
-
-
-
-
-.actions 
-  =link_to tg(:previous), :action=>:listings
+.actions=link_to tg(:previous), :action=>:listings
