--- a/app/views/accountancy/index.html.haml
+++ b/app/views/accountancy/index.html.haml
@@ -2,3 +2,4 @@
   %h2= tg('indicator')
   %ul
     =li_link_to tc('nb_entries',:count=>@entries.size), :action=>:entries
+=render :partial=>'journals'
