Begins to add support for #65 evolution. Need to manage draft entries to fix it completely.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1444 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_bank_account_statement_form.html.haml
+++ b/app/views/accountancy/_bank_account_statement_form.html.haml
@@ -1,6 +1,6 @@
 =formalize do |f|
-  - f.error :statement
-  - f.field :statement, :bank_account_id, :choices => @bank_accounts.collect{|b| [b.name, b.id]}, :new => {:action => :bank_account_create}
-  - f.field :statement, :number
-  - f.field :statement, :started_on
-  - f.field :statement, :stopped_on
+  - f.error :bank_account_statement
+  - f.field :bank_account_statement, :bank_account_id, :choices => @current_company.bank_accounts.collect{|b| [b.name, b.id]}, :new => {:action => :bank_account_create}
+  - f.field :bank_account_statement, :number
+  - f.field :bank_account_statement, :started_on
+  - f.field :bank_account_statement, :stopped_on
