--- a/app/views/accountancy/accountize.html.haml
+++ b/app/views/accountancy/accountize.html.haml
@@ -1,13 +1,23 @@
-.count=tc(:nb_invoices, :count=>@current_company.invoices.find(:all,:conditions=>['accounted_at IS NOT NULL and amount!=0']).size)
--#.count=tc(:nb_sales, :count=>@current_company.sale_orders.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
--#.count=tc(:nb_purchases, :count=>@current_company.purchase_orders.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
--#.count=tc(:nb_payments, :count=>@current_company.payments.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
--#.count=tc(:nb_transfers, :count=>@current_company.transfers.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
 
-- form_tag(:action=>:draft_entries) do
-  =formalize do |f|
-    - f.field tc(:select_date_generation), (text_field_tag :date_generation_entries, Date.today) 
-    - f.field tc(:cashed_payments), (check_box_tag :cashed_payments, 0 ) 
-  .actions
-    =submit_tag(tc('draft_generate'))
+-if @step == 1
+  - form_tag({}, :method=>:put) do
+    =formalize do |f|
+      -f.field tc(:select_date_generation), (calendar_field_tag :finish_accountization_on, params[:finish_accountization_on]) 
+    .actions=submit_tag(tg(:validate))
+
+
+-if @step == 2
+  -#.count=tc(:nb_invoices, :count=>@invoices.size)
+  -#.count=tc(:nb_sales, :count=>@current_company.sale_orders.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
+  -#.count=tc(:nb_purchases, :count=>@current_company.purchase_orders.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
+  -#.count=tc(:nb_payments, :count=>@current_company.payments.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
+  -#.count=tc(:nb_transfers, :count=>@current_company.transfers.find(:all,:conditions=>['accounted_at IS NOT NULL']).size)
+  - form_tag({}, :method=>:post) do
+    =formalize do |f|
+      -f.field tc(:select_date_generation), ::I18n.localize(params[:finish_accountization_on])
+      -f.field tc(:invoices_count), @invoices.size
+      -f.field tc(:dont_save_in_draft), check_box_tag("dont_save_in_draft")
+    .actions
+      =submit_tag(tg(:save))
+      =link_to tg(:back), :action=>:accountize, :finish_accountization_on=>params[:finish_accountization_on]
  
