--- a/app/views/management/_sale_order_delivery_form.html.haml
+++ b/app/views/management/_sale_order_delivery_form.html.haml
@@ -28,13 +28,13 @@
       %td{:style=>'text-align:center'}
         =text_field_tag "delivery_line[#{@line.order_line_id}][quantity]", @line.quantity, :id=>"delivery_line_#{@line.order_line_id}_quantity"
         =observe_field "delivery_line_#{@line.order_line.id}_quantity", :url=>{:action => :sum_calculate}, :frequency => 0.25, :with=>"Form.serialize('#{@delivery_form}')"
-.total
-  %table.dyta
-    %tr
-      %th=tc :amount
-      %td#sum_total_ht=@delivery.amount
-    %tr.important
-      %th=tc :amount_with_taxes
-      %td#sum_total=@delivery.amount_with_taxes
+
+%table.dyta
+  %tr.total
+    %th=tc :amount
+    %td#sum_total_ht=@delivery.amount
+  %tr.important.total
+    %th=tc :amount_with_taxes
+    %td#sum_total=@delivery.amount_with_taxes
 
 
