--- a/app/views/management/sale_order_summary.html.haml
+++ b/app/views/management/sale_order_summary.html.haml
@@ -11,10 +11,10 @@
   =dyta :sale_order_invoices
 
 %h2=tc :financial_state
-.total
-  %table.dyta
-    -for k, v in @sale_order.stats(:with_balance=>true)
-      %tr
-        %th=tc(k)
-        %td=number_to_currency(v, :unit=>'', :separator=>',', :delimiter=>'&nbsp;')
+
+%table.dyta
+  -for k, v in @sale_order.stats(:with_balance=>true)
+    %tr.total
+      %th=tc(k)
+      %td=number_to_currency(v, :unit=>'', :separator=>',', :delimiter=>'&nbsp;')
  
