Fixes the first step in accountizing with terminating #65 and cleaning accountancy (Lot of unusable code)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1445 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_account_form.html.haml
+++ b/app/views/accountancy/_account_form.html.haml
@@ -1,6 +1,8 @@
 -if @account
   =formalize do |f|
-    - f.error :account
-    - f.field :account, :name
-    -# f.field :account, :label
-    - f.field :account, :number if @account.new_record?
+    -f.error :account
+    -if @account.new_record?
+      -f.field :account, :number
+    -else
+      -f.field Account.human_attribute_name("number"), @account.number
+    -f.field :account, :name
