--- a/app/views/accountancy/journal_record.html.haml
+++ b/app/views/accountancy/journal_record.html.haml
@@ -1,3 +1,4 @@
+=render :partial=>"journals"
 =toolbar do |t|
   -t.link(:journal_record_update, :id=>@journal_record.id) unless @journal_record.closed?
 %table
