--- a/app/views/accountancy/financialyear_close.html.haml
+++ b/app/views/accountancy/financialyear_close.html.haml
@@ -1,26 +1,11 @@
 -form_tag do
   =formalize do |f|
-    - f.error :financialyear
-    - f.field :financialyear, :id, :choices => @financialyears.collect {|y| [y.code, y.id]}
-    - f.field :financialyear, :stopped_on, :choices => @financialyear_records
-    - f.field tc(:save_renew), {:datatype => :radio, :choices=>choices_yes_no} 
-  =formalize(:id=>:renew) do |f|  
-    - f.field tc(:select_renew_journal), {:datatype => :choice, :choices => @renew_journal.collect{|j| [j.name.to_s, j.id.to_s]}, :options => {:include_blank => "--Aucun--"}, :name => :journal_id, :id => :journal_id, :new=> {:action => :journal_create} }
+    -f.error :financialyear
+    -f.title :title
+    -f.field Financialyear.human_name, @financialyear.code
+    -f.field :financialyear, :stopped_on, :choices => @financialyear.closures.collect{|d| [I18n.localize(d), d]} 
+    -f.title :use_renew
+    -f.field tc(:select_renew_journal), select_tag("journal_id", options_for_select([[tc("dont_use_journal"), ""], [tc("create_journal"), 0]]+@current_company.journals.collect{|j| [j.name, j.id]}, :selected=>params[:journal_id]))
   .actions
-    =submit_tag(tc(:close))
+    =submit_tag(tc(:close), :confirm=>tg(:are_you_sure))
     =link_to_back
-
-=observe_field "financialyear_id", :frequency => 0.25, :url => {:action => :financialyears_records}, :update => :financialyear_stopped_on, :with => "'financialyear_select=' + escape(value)"
-=observe_field "radio_true", :frequency => 0.25, :function =>"banToggleTrue(element)"
-
-:javascript
-  function banToggleTrue(element) {
-    if (element.checked) { 
-      $('renew').show();
-   } else { 
-      $('renew').hide();
-    }
-  }
-  $('radio_false').checked = "checked"
-  $('renew').hide();
-  
