--- a/app/views/accountancy/index.html.haml
+++ b/app/views/accountancy/index.html.haml
@@ -1,5 +1,5 @@
 .menu.indicator
   %h2= tg('indicator')
   %ul
-    =li_link_to tc('nb_entries',:count=>@entries.size), :action=>:entries
+    =li_link_to tc(:nb_entries, :count=>@entries.size), :action=>:entries
 =render :partial=>'journals'
