--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
-    %title=(@current_company ? @current_company.code : 'Ekylibre')+' - '+t("controllers.#{controller.controller_name.to_s}.title")+' - '+t("views.#{controller.controller_name}.#{action_name}.title", @title||{})
+    =title_tag
     =theme_link_tag(@current_theme)
     =calendar_link_tag
     =javascript_include_tag :defaults
@@ -20,7 +20,7 @@
           .nav{:flexy=>'true'}
             =help_link_tag
             =side_link_tag
-            %h1.title=title
+            %h1.title=action_title
           #yield{:flex=>50, :orient=>:vertical}
             =notification_tag :error
             =notification_tag :warning
