--- a/app/views/shared/form_create.html.haml
+++ b/app/views/shared/form_create.html.haml
@@ -1,5 +1,6 @@
-- form_tag(nil, {:id=>@options[:id]}) do
-  =render :partial=>@partial
+-form_id = @options[:id]||"f"+rand.to_s[2..-1]
+-form_tag(nil, {:id=>form_id}) do
+  .fields=render :partial=>@partial
   .actions
     =submit_tag(tg(@options[:submit]||:create))
     =link_to_back :label=>@options[:cancel]||:cancel
